--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon ./src/bot.js"
+    "start": "nodemon ./src/bot.js",
+    "deploy": "node ./src/deploy-commands.js"
   },
   "dependencies": {
     "axios": "^1.6.2",
